<resources>
    <string name="app_name">E-Commerce</string>
    <string name="SDG_unit">SDG</string>
    <string name="products_toolbar_title">Products</string>
    <string name="detail_toolbar_title">View Item</string>
    <string name="my_info_nav">My Info</string>
    <string name="about_the_app_nav">About The App</string>
    <string name="contact_us_nav">Contact Us</string>
    <string name="search">search</string>
    <string name="share_and_rate">Share and rate</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="home_nav">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_item_title">View Item</string>
    <string name="add_item_title">Add Item</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="category1_title">Category1</string>
    <string name="category2_title">Category2</string>
    <string name="category3_title">Category3</string>
    <string name="all_categories_title">All</string>
    <string name="add_itme">add</string>
    <string name="search_hint">Search</string>
    <string name="not_connected_message">Check your internet connection and try again</string>
    <string name="refresh">Refresh</string>
    <string name="not_connected_to_a_network_message">Please make sure that you have an internet connection</string>
</resources>
